--- a/templates/login.html
+++ b/templates/login.html
@@ -29,6 +29,9 @@
                         <div class="form-group">
                             <label for="password">Password</label>
                             <input type="password" id="password" name="password" required placeholder="Enter your password">
+                            <div style="text-align: right; margin-top: 8px;">
+                                <a href="/forgot-password" style="color: var(--primary-color); font-size: 14px; text-decoration: none;">Forgot password?</a>
+                            </div>
                         </div>
                         
                         <button type="submit" class="btn-primary btn-full" id="loginBtn">
